--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -8,6 +8,14 @@ es:
           attributes:
             countries:
               invalid: "tiene que contener nombres válidos de país"
+        donation:
+          attributes:
+            date:
+              invalid: "tiene que ser hoy o anterior a hoy"
+        recurring_donation:
+          attributes:
+            date:
+              invalid: "tiene que ser hoy o anterior a hoy"
     models:
       user: Usuario
       invitation: Invitación
@@ -39,6 +47,12 @@ es:
         currency: Moneda
         user_id: Usuario
         comment: Comentario
+      recurring_donation:
+        date: Fecha
+        project_id: Proyecto
+        quantity: Cantidad
+        currency: Moneda
+        user_id: Usuario
   language_name: 'Español'
   hello: "Hello world"
   # generics
