--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -83,7 +83,8 @@ es:
   home: 
     read_more_about_this_project: "Más sobre este proyecto"
     have_you_donated_sometime: ¿Has donado alguna vez a una ONG o un proyecto?
-    yes_of_course: Si, claro
+    not_yet: Todavía no
+    yes_of_course: Si
     so_its_about_time: Pues ya va siendo hora, ¿o qué?
     so_its_about_time_explanation: |
       Te animamos a que contribuyas con una pequeña (o gran) donación a uno de los muchos proyectos que se mantienen gracias a las contribuciones de personas como tú. Hay proyectos de todo tipo, seguro que encuentras alguno que haga algo que te parezca interesante.
