--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,7 +44,8 @@ en:
   home: 
     read_more_about_this_project: "Read more about this project"
     have_you_donated_sometime: Have you ever donated to an NGO or project?
-    yes_of_course: Yes, of course
+    not_yet: Not yet
+    yes_of_course: Yes
     so_its_about_time: "So its about time, isn't it?"
     so_its_about_time_explanation: |
       We invite you to contribute with a small (or big) donation to one of the many projects maintained thanks to the contributions of people like you and me. There are all kinds of projects, for sure you will find some that interests you. 
