--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -84,7 +84,7 @@ es:
     read_more_about_this_project: "Más sobre este proyecto"
     have_you_donated_sometime: ¿Has donado alguna vez a una ONG o un proyecto?
     not_yet: Todavía no
-    yes_of_course: Si
+    yes_of_course: Sí
     so_its_about_time: Pues ya va siendo hora, ¿o qué?
     so_its_about_time_explanation: |
       Te animamos a que contribuyas con una pequeña (o gran) donación a uno de los muchos proyectos que se mantienen gracias a las contribuciones de personas como tú. Hay proyectos de todo tipo, seguro que encuentras alguno que haga algo que te parezca interesante.
