--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -148,6 +148,7 @@ es:
       private_donation_not_visible_explanation: Esta donación es privada, de modo que la cantidad solo será visible para el autor
       private_donation_not_visible_explanation_in_profile: Este usuario tiene donaciones privadas, por lo que el total no incluye todas
       private_donation_not_visible_explanation_in_profile_for_self: Tienes donaciones privadas, así que el total solo lo verás tu, pero no los otros usuarios
+      recurring_donation_started: Donación periódica, empezada hace %{started}
     form:
       update_donation: Actualizar
       cancel: Cancelar
