--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -296,6 +296,9 @@ es:
       in_total: en total
       has_donated_to: Ha donado a
       thinking_on_donating_to: Pensando en donar a
+      project:
+        one: '%{count} proyecto'
+        other: '%{count} proyectos'
     show:
       edit_your_profile: Edita tu perfil
       track_your_first_donation: Registra tu primera donación
