--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -107,6 +107,9 @@ es:
 
       Si aún así sigues sin verlo claro, que sepas que estamos pensando en ofrecer la posibilidad de que puedas tener un perfil privado que te ayude a gestionar tus donaciones de forma confidencial. Si estás interesado en algo así, [dános un toque](lets@trackdons.org) y puede que le demos prioridad ;)
   # donaciones
+  recurring_donations:
+    destroy:
+      destroy_success: 'Donación periódica eliminada correctamente'
   donations:
     destroy:
       destroy_success: 'Donación eliminada correctamente'
